@008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/keyfile.sgml: Explain locale identifiers in
	more detail

@008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 562549 – g_byte_array_free should tell how free data

	* glib/tmpl/arrays_byte.sgml: Improve docs, proposed by
	Guillaume Desmottes

2008-11-21  Matthias Clasen  <mclasen@redhat.com>

	* glib/Makefile.am:
	* gobject/Makefile.am:
	* gio/Makefile.am: Use a new gtk-doc feature to generate
	much nicer indices.

2008-11-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Add G_STATIC_ASSERT and friends

2008-11-14  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add G_FILE_ATTRIBUTE_PREVIEW_ICON

2008-11-10  Behdad Esfahbod  <behdad@gnome.org>

	Bug 559448 – GObject Reference Manual (typo)

	* gobject/tut_gobject.xml: Fix typo.

2008-11-03 Matthias Clasen  <mclasen@redhat.com>

	Bug 552776 – ac_cv_func_posix_getgrgid_r not mentioned

	* glib/cross.sgml: Mention ac_cv_func_posix_getgrgid_r.

2008-10-29 16:04:38  Tim Janik  <timj@gtk.org>

	* glib/tmpl/macros_misc.sgml: Clarified/added docs for
	G_STRINGIFY, G_PASTE and G_STATIC_ASSERT, based on
	patches from Christian Persch and  Christian Dywan.

2008-10-21  Alexander Larsson  <alexl@redhat.com>

        * gio/gio-sections.txt:
	Update with new symbolse

2008-10-16  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.0 ===

	* gio/gio-sections.txt: Add new api

	* gobject/gobject-docs.sgml: 
	* gio/gio-docs.xml: Add new indexes

2008-10-16  Matthias Clasen  <mclasen@redhat.com>

	* glib/Makefile.am: Don't specify multiple directories in
	DOC_SOURCE_DIR. It doesn't work.

2008-09-26  Dan Winship  <danw@gnome.org>

	* glib/tmpl/testing.sgml: Fix lots of typos, document
	g_assert_error() and g_assert_no_error()

2008-09-26`  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/iochannel.sgml: Move more docs inline

2008-09-17  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.18.1 ===
